--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,28 +2,18 @@
 
 name: Testing my first GitHub Action
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on: [push]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "hello_world_job"
- hello_world_job:
-    # The type of runner that the job will run on
+  hello_world_job:
     runs-on: ubuntu-latest
     name: A job to say hello
-    
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
- - name: Hello world action step
+    - name: Hello world action step
       id: hello
-      uses: Carikr/hello-world-javascript-action@v1
+      uses: actions/hello-world-javascript-action@v1
       with:
-        who-to-greet: 'Carike and Octocat'
+        who-to-greet: 'Mona the Octocat'
     # Use the output from the `hello` step
     - name: Get the output time
       run: echo "The time was ${{ steps.hello.outputs.time }}"
