--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
     - name: Hello world action step
       id: hello
-      uses: carike/hello-world-javascript-action@v1
+      # uses: carike/hello-world-javascript-action@v1
+      uses: actions/hello-world-javascript-action@v1
       with:
         who-to-greet: 'Carike and Octocat'
     # Use the output from the `hello` step
